--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,10 @@
 
 @plugin "daisyui";
 
+.btn-indigo {
+  @apply px-6 py-3 rounded bg-indigo-700 text-white text-sm font-bold whitespace-nowrap hover:bg-orange-500 focus:bg-orange-500;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
